Adds DataDefinitions container with table to client
