# swagger.json
@@ -6,6 +6,37 @@
     "requestBodies": {},
     "responses": {},
     "schemas": {
+      "DataDefinitionInfo": {
+        "properties": {
+          "example": {
+            "type": "string"
+          },
+          "format": {
+            "type": "string"
+          },
+          "reason": {
+            "type": "string"
+          },
+          "definition": {
+            "type": "string"
+          },
+          "required": {
+            "type": "string"
+          },
+          "formattedName": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "example",
+          "format",
+          "reason",
+          "definition",
+          "required",
+          "formattedName"
+        ],
+        "type": "object"
+      },
       "EnrollmentReport": {
         "properties": {
           "id": {
@@ -686,6 +717,28 @@
   },
   "openapi": "3.0.0",
   "paths": {
+    "/data-definitions": {
+      "get": {
+        "operationId": "GetDataDefinitions",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "$ref": "#/components/schemas/DataDefinitionInfo"
+                  },
+                  "type": "array"
+                }
+              }
+            }
+          }
+        },
+        "security": [],
+        "parameters": []
+      }
+    },
     "/enrollment-reports/{reportId}": {
       "get": {
         "operationId": "GetEnrollmentReportById",
